Implementing forward/backward functionality

--- a/index.html
+++ b/index.html
@@ -9,12 +9,19 @@
     </head>
     <body>
         <h1>DotA 2 Tournament Prize Pools</h1>
-        <div id="option">
-            <input name="updateButton" 
+        <div id="increment">
+            <input name="incrementButton" 
                    type="button" 
-                   value="Update" 
-                   onclick="updateData()" />
+                   value=">>" 
+                   onclick="increment()" />
         </div>
+        
+        <div id="decrement">
+            <input name="decrementButton" 
+                   type="button" 
+                   value="<<" 
+                   onclick="decrement()" />
+        </div
 
     </body>
     <script type="text/javascript" src="script.js"></script>
